Add queen attack, shift cipher modules and database backup

--- a/sites/all/themes/jillzen/css/styles.css
+++ b/sites/all/themes/jillzen/css/styles.css
@@ -20,3 +20,13 @@
 /* SMACSS theme rules */
 /* @import "theme-A.css"; */
 /* @import "theme-B.css"; */
+
+
+/*#header{
+	text-align: center;
+	width: 300px;
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+}
+*/
