--- a/sites/all/themes/jillzen/css/styles.css
+++ b/sites/all/themes/jillzen/css/styles.css
@@ -30,3 +30,28 @@
 	margin-left: auto;
 }
 */
+
+#header{
+	background-image: url("img/botanicalheader.jpg");
+	height: 200px;
+	position: relative;
+}
+
+body{
+	font-family: "Arial", "Helvetica", sans-serif;
+}
+
+#name-and-slogan{
+    border-style: solid;
+    border-color: black;
+    background: rgba(255, 255, 255, .3);
+    border-width: medium;
+    border-radius: 25px;
+    padding: 10px;
+    text-align: center;
+    position: absolute;
+
+	margin: 0px 0 0 0px;
+	left: 40%;
+	top:25%;
+}
